--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,8 @@
     </div>
 
     <nav class="sidebar-nav">
+
+<!--
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
       {% comment %}
@@ -25,12 +27,11 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+-->
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <!-- <a class="sidebar-nav-item" href="/setup.sh">Download</a> -->
+      <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
-
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
